Perkin-UAT/force-app/main/default/objects/Interaction__c/Interaction__c.object-meta.xml
<CustomObject>
    <description>This will hold Interactions from Leads/Contacts over time that get assigned to an &quot;ARQ:&quot; (Assignment Rule Queue) to process</description>
    <label>Interaction</label>
    <nameField>
        <displayFormat>IN-{00000000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>