Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/AccountCompany__c.field-meta.xml
<CustomField>
    <fullName>AccountCompany__c</fullName>
    <formula>IF ( ISBLANK(Contact__c), Lead__r.Company, Contact__r.Account.Name )</formula>
    <label>Account/Company</label>
    <type>Text</type>
</CustomField>