Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Best_Time_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Contact__c</fullName>
    <label>Best Time to Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early morning (8am-10am)</fullName>
            </value>
            <value>
                <fullName>Late morning (10am-12pm)</fullName>
            </value>
            <value>
                <fullName>Early afternoon (12pm-3pm)</fullName>
            </value>
            <value>
                <fullName>Late afternoon (3pm-5pm)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>