Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/BusinessEntity__c.field-meta.xml
<CustomField>
    <fullName>BusinessEntity__c</fullName>
    <label>Business Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_411_Business_Entitiy</valueSetName>
    </valueSet>
</CustomField>