Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/BusinessPhone__c.field-meta.xml
<CustomField>
    <fullName>BusinessPhone__c</fullName>
    <description>Phone number provided from source system</description>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>