Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>