Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The City of the Interaction</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>