Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/ClosedStatus__c.field-meta.xml
<CustomField>
    <fullName>ClosedStatus__c</fullName>
    <description>One the interaction is closed, it should either turnback to Nurturing, reject, or convert into an opportunity</description>
    <inlineHelpText>When closing the interaction, choose Convert, Turnback, Nurturing</inlineHelpText>
    <label>Closed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_413_Interaction_Closed_Status</valueSetName>
    </valueSet>
</CustomField>