Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Contact_Requested__c.field-meta.xml
<CustomField>
    <fullName>Contact_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Requested</label>
    <type>Checkbox</type>
</CustomField>