Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <description>The date on which Interaction is converted to opportunity</description>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>