Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Provided by integration; Country of person on lead</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>