Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Current_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Engagement_Score__c</fullName>
    <description>INC0381394   text field</description>
    <inlineHelpText>Implicit data about the lead’s interest behavior such as form submits, email interaction or site visits</inlineHelpText>
    <label>Current Engagement Score</label>
    <length>40</length>
    <type>Text</type>
</CustomField>