Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <description>fetches logged in user&#39;s related contact name</description>
    <formula>IF($User.License_type__c =&quot;Partner Community&quot;, $User.Related_Contact_Name__c, &quot;&quot;)</formula>
    <label>Dealer Name</label>
    <type>Text</type>
</CustomField>