Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Demo_Requested__c.field-meta.xml
<CustomField>
    <fullName>Demo_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Requested</label>
    <type>Checkbox</type>
</CustomField>