Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Direct_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Direct_Assignment__c</fullName>
    <label>Direct Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>