Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Eloqua_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Campaign_ID__c</fullName>
    <description>field will be used by Eloqua for sending records.</description>
    <label>Eloqua Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>