Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address provided from source system</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>