Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/End_User_City__c.field-meta.xml
<CustomField>
    <fullName>End_User_City__c</fullName>
    <label>End User City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>