Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/End_User_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Name__c</fullName>
    <description>Combination of Dealer Name and Dealer Account Name on Interactions</description>
    <formula>Dealer_Name__c &amp; &quot; &quot; &amp; Dealer_Account_Name__c</formula>
    <label>End User Name</label>
    <type>Text</type>
</CustomField>