Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/End_User_Name_Int__c.field-meta.xml
<CustomField>
    <fullName>End_User_Name_Int__c</fullName>
    <description>End user name for interactions</description>
    <label>End User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>