Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INC0304725:
Created for Identifying Interaction records as coming from the Cisbio pages &amp; forms.</description>
    <inlineHelpText>Identifying Interaction records as coming from the Cisbio pages &amp; forms.</inlineHelpText>
    <label>Cisbio Engagement</label>
    <type>Checkbox</type>
</CustomField>