Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Engagement_Priority__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Priority__c</fullName>
    <description>INC0087644 -  have a field in the interaction object</description>
    <formula>IF(NOT(ISBLANK(GROW__c)), 1,
IF(Quote_Requested__c = TRUE, 2,
IF(Contact_Requested__c = TRUE, 3,
IF(Demo_Requested__c = TRUE, 4,
5))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>