Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Capture First Name to create Lead for manual interaction creation(RITM0159432)</description>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>