Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/FlagForUpdate__c.field-meta.xml
<CustomField>
    <fullName>FlagForUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this value to True or false to force record edit time and procedures to run based on a change event.</description>
    <label>FlagForUpdate</label>
    <type>Checkbox</type>
</CustomField>