Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_ID__c</fullName>
    <description>This is used to collect unique ID for users to identify(Source : INC0393005).</description>
    <inlineHelpText>The unique ID string that helps users to identify a source of form.</inlineHelpText>
    <label>Form ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>