Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxDaysCreateToLastTransfer__c.field-meta.xml
<CustomField>
    <fullName>fxDaysCreateToLastTransfer__c</fullName>
    <description>This calculates the time between Last Transfer Date and Created Date.</description>
    <formula>ROUND(fxLastDateTransfer__c - CreatedDate,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This calculates the time between Last Transfer Date and Created Date.</inlineHelpText>
    <label>fxDaysCreateToLastTransfer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>