Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxDaysCreateToWorking__c.field-meta.xml
<CustomField>
    <fullName>fxDaysCreateToWorking__c</fullName>
    <description>This calculates the time between Last Working Date and Created Date.</description>
    <formula>ROUND(fxLastDateWorking__c - CreatedDate,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This calculates the time between Last Working Date and Created Date.</inlineHelpText>
    <label>fxDaysCreateToWorking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>