Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxDaysFromSubmit__c.field-meta.xml
<CustomField>
    <fullName>fxDaysFromSubmit__c</fullName>
    <description>This field is used to calculate days from interaction submit date.</description>
    <formula>ROUND(
CASE( TEXT(ClosedStatus__c)
,&#39;Converted&#39;, Converted_Date__c
,&#39;Abandoned&#39;,DATEVALUE(RejectedDate__c)
,&#39;Future Nurturing&#39;,DATEVALUE(TurnbackDate__c)
, Today()
)
- DATEVALUE(InteractionDate__c)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to calculate days from interaction submit date.</inlineHelpText>
    <label>fxDaysFromSubmit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>