Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxDaysSubmitToCreate__c.field-meta.xml
<CustomField>
    <fullName>fxDaysSubmitToCreate__c</fullName>
    <description>This calculates the time between Created Date and Interaction date.</description>
    <formula>ROUND( CreatedDate - InteractionDate__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This calculates the time between Created Date and Interaction date.</inlineHelpText>
    <label>fxDaysSubmitToCreate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>