Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxDistributor__c.field-meta.xml
<CustomField>
    <fullName>fxDistributor__c</fullName>
    <description>this looks at license type of owner and if Partner, this is a distributor</description>
    <formula>CONTAINS(Owner:User.License_type__c ,&quot;Partner&quot;)</formula>
    <label>Distributor</label>
    <type>Checkbox</type>
</CustomField>