Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxFirstName__c.field-meta.xml
<CustomField>
    <fullName>fxFirstName__c</fullName>
    <formula>/*If there isn&#39;t a contact, then get lead name */

IF ( ISBLANK(Contact__c),  Lead__r.FirstName ,  Contact__r.FirstName)</formula>
    <label>fxFirstName</label>
    <type>Text</type>
</CustomField>