Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxLastDateOpen__c.field-meta.xml
<CustomField>
    <fullName>fxLastDateOpen__c</fullName>
    <description>This field shows when interaction was last opened using L.Flow 2502. Source :INC0372936</description>
    <inlineHelpText>This field shows when interaction was last opened.</inlineHelpText>
    <label>fxLastDateOpen</label>
    <type>DateTime</type>
</CustomField>