Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxLastDateTransfer__c.field-meta.xml
<CustomField>
    <fullName>fxLastDateTransfer__c</fullName>
    <description>This field shows when interaction was last transferred using L.Flow 2502.</description>
    <inlineHelpText>This field shows when interaction was last transferred.</inlineHelpText>
    <label>fxLastDateTransfer</label>
    <type>DateTime</type>
</CustomField>