Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxMyInteraction__c.field-meta.xml
<CustomField>
    <fullName>fxMyInteraction__c</fullName>
    <description>ITSFDC-4812</description>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxMyInteraction</label>
    <type>Checkbox</type>
</CustomField>