Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxOppRefNumber__c.field-meta.xml
<CustomField>
    <fullName>fxOppRefNumber__c</fullName>
    <description>Opportunity Reference Number to be referred in Converted Opportunities on Lead Interaction conversion</description>
    <formula>Opportunity_Ref_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxOppRefNumber</label>
    <type>Text</type>
</CustomField>