Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxQueueMembers__c.field-meta.xml
<CustomField>
    <fullName>fxQueueMembers__c</fullName>
    <description>the user ID&#39;s of queue members where the Owner of the interaction is a queue, or else the field will be blank or set to the owner id when not owned by a queue</description>
    <formula>/*If owner is a user, then user id...else use the assignment rule to get the members of the queue...last resort, show the queue id */
IF( LEFT(OwnerId,3) = &quot;005&quot;,  OwnerId ,

 IF(NOT(ISBLANK( AssignmentRule__c )), AssignmentRule__r.PKIQueue__r.fxQueueMembers__c , OwnerId ))</formula>
    <label>fxQueueMembers</label>
    <type>Text</type>
</CustomField>