Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxRuleAreaOfInterest__c.field-meta.xml
<CustomField>
    <fullName>fxRuleAreaOfInterest__c</fullName>
    <label>fxRuleAreaOfInterest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>