Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxRuleCountry__c.field-meta.xml
<CustomField>
    <fullName>fxRuleCountry__c</fullName>
    <description>Region for the rule that was applied to this interaction</description>
    <formula>AssignmentRule__r.Country__c</formula>
    <inlineHelpText>Country for the rule that was applied to this interaction</inlineHelpText>
    <label>fxRuleCountry</label>
    <type>Text</type>
</CustomField>