Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxRuleProductClass__c.field-meta.xml
<CustomField>
    <fullName>fxRuleProductClass__c</fullName>
    <label>fxRuleProductClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>