Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxRuleProductLine__c.field-meta.xml
<CustomField>
    <fullName>fxRuleProductLine__c</fullName>
    <label>fxRuleProductLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>