Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxSameAccount__c.field-meta.xml
<CustomField>
    <fullName>fxSameAccount__c</fullName>
    <description>ITSFDC-4812</description>
    <formula>Account__r.Name =fxUserAccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxSameAccount</label>
    <type>Checkbox</type>
</CustomField>