Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxScore__c.field-meta.xml
<CustomField>
    <fullName>fxScore__c</fullName>
    <description>This field is auto populated based on PKI Lead Score either from Lead Record or Contact Record.- (S-692560/S-692561)</description>
    <formula>IF(  ISBLANK( Lead__r.PKI_Lead_Score__c  ) ,Contact__r.PKI_Lead_Score__c, Lead__r.PKI_Lead_Score__c)</formula>
    <inlineHelpText>It populates the PKI Lead Score either from Lead Record or Contact Record.</inlineHelpText>
    <label>fxScore</label>
    <type>Text</type>
</CustomField>