Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxTimeInStage__c.field-meta.xml
<CustomField>
    <fullName>fxTimeInStage__c</fullName>
    <description>tells you the days at this stage as a number</description>
    <formula>ROUND(
CASE( TEXT(Status__c)
  ,&#39;Open&#39;, NOW() - BLANKVALUE(fxLastDateOpen__c ,InteractionDate__c )
  ,&#39;Working&#39;, NOW() - BLANKVALUE(fxLastDateWorking__c ,InteractionDate__c)
  , 0
  )
,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>tells you the days at this stage as a number</inlineHelpText>
    <label>fxTimeInStage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>