Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/fxUserAccountId__c.field-meta.xml
<CustomField>
    <fullName>fxUserAccountId__c</fullName>
    <description>ITSFDC-4812</description>
    <formula>$User.fxAccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxUserAccountId</label>
    <type>Text</type>
</CustomField>