Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/GA_Cookie__c.field-meta.xml
<CustomField>
    <fullName>GA_Cookie__c</fullName>
    <description>This is used to collect anonymous information, including the number of visitors to the site.(Source : INC0393005)</description>
    <inlineHelpText>GA cookies collect anonymous information, including the number of visitors to the site, unique visitors where visitors have come to the site from and the pages they visited</inlineHelpText>
    <label>GA Cookie</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>