Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/GROW_Referral_Business__c.field-meta.xml
<CustomField>
    <fullName>GROW_Referral_Business__c</fullName>
    <label>GROW Referral Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>