Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Interaction_Icon__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Icon__c</fullName>
    <description>S-692560/S-692561 - created as part of both the stories</description>
    <formula>IMAGE(
CASE(Qualification_Status__c, 
&quot;QL Hot&quot;, &quot;/resource/HotIndicatorFlame&quot;,
&quot;QL Warm&quot;, &quot;/resource/WarmIndicatorFlame&quot;,
&quot;Pre-QL&quot;, &quot;/resource/PreQLIndicatorFlame&quot;,
&quot;&quot;)
,&quot;&quot;, 25,25)</formula>
    <inlineHelpText>The flame Indicates what type of Interaction it is. For Hot Interaction its RED Flame, Warm Interaction its YELLOW Flame and Pre-QL Interaction its BLUE Flame.</inlineHelpText>
    <label>Interaction Icon</label>
    <type>Text</type>
</CustomField>