Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/InteractionAssignmentRules__c.field-meta.xml
<CustomField>
    <fullName>InteractionAssignmentRules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the custom PKI QUEUE object</description>
    <label>Interaction Assignment Rules</label>
    <referenceTo>Interaction_Assignment_Rules__c</referenceTo>
    <relationshipLabel>Interactions (Interaction Assignment Rules)</relationshipLabel>
    <relationshipName>InteractionAssignmentRules</relationshipName>
    <type>Lookup</type>
</CustomField>