Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/isTest_Interaction__c.field-meta.xml
<CustomField>
    <fullName>isTest_Interaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTest Interaction</label>
    <type>Checkbox</type>
</CustomField>