Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Capture Last Name to create Lead for manual interaction creation(RITM0159432)</description>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>