Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Lead_Indicators__c.field-meta.xml
<CustomField>
    <fullName>Lead_Indicators__c</fullName>
    <description>for entering Lead Indicators  in Long Text Area  per  INC0381394</description>
    <inlineHelpText>&quot;+&quot; and &quot;–&quot; call out indicators why this record is of interest</inlineHelpText>
    <label>Initiatives / Projects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>