Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Lead_Profile_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Profile_Score__c</fullName>
    <description>INC0381394    text field</description>
    <inlineHelpText>Explicit potential customer data which identify &quot;A&quot; as a good fit or &quot;D&quot; not enough data provided</inlineHelpText>
    <label>Lead Profile Score</label>
    <length>40</length>
    <type>Text</type>
</CustomField>