Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/LeadQualificationStageDate__c.field-meta.xml
<CustomField>
    <fullName>LeadQualificationStageDate__c</fullName>
    <description>The date/time the lead reached this qualification stage</description>
    <label>Lead Qualification Stage Date</label>
    <type>DateTime</type>
</CustomField>