Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Opportunity_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Ref_Number__c</fullName>
    <description>This is used as an &quot;Opp&quot;-{auto number} field on Interactions as a backend field used to refer on opportunity on successful conversion from Lead Interaction. This is used in new dealer portal.</description>
    <displayFormat>Opp{0000}</displayFormat>
    <label>Opportunity Ref Number</label>
    <type>AutoNumber</type>
</CustomField>