Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/OpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStage__c</fullName>
    <description>Reads Stage from the related Opportunity (if any)</description>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>