Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/PKI_Queue__c.field-meta.xml
<CustomField>
    <fullName>PKI_Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will hold the Custom PKI Queue Reference that mirrrors the Native Queue owner. This is so that we can monitor the OwnedByCompany Value of the Queue vs. the Interaction through formula</description>
    <inlineHelpText>This will hold the Custom PKI Queue Reference that mirrrors the Native Queue owner. This is so that we can monitor the OwnedByCompany Value of the Queue vs. the Interaction through formula</inlineHelpText>
    <label>PKI Queue</label>
    <referenceTo>PKI_Queue__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>