Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/PrimaryQualification__c.field-meta.xml
<CustomField>
    <fullName>PrimaryQualification__c</fullName>
    <label>Primary Qualification</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>