Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <label>Product Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Topic_you_need_help_with__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Consumables &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>PCs &amp; Software</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Instrument Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>