Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/ProductLine__c.field-meta.xml
<CustomField>
    <fullName>ProductLine__c</fullName>
    <description>Provided by integration; Product line based on the Solution Area of interest</description>
    <label>Product Line</label>
    <type>TextArea</type>
</CustomField>