Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Provided by integration; Product Name based on the Solution Area of interest</description>
    <label>Product Name</label>
    <type>TextArea</type>
</CustomField>