Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/ProductNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductNumber__c</fullName>
    <description>Provided by integration; Product Number based on the Solution Area of interest</description>
    <label>Product Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>