Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Quote_Details__c.field-meta.xml
<CustomField>
    <fullName>Quote_Details__c</fullName>
    <businessOwnerGroup>ARQ_001004</businessOwnerGroup>
    <description>INC0304725:
Created for Cisbio integration for capturing cart details from form submit (multiple lines per item, and multiple items)</description>
    <inlineHelpText>Captures cart details from form submit</inlineHelpText>
    <label>Quote Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>