Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Abandoned Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_420_Rejected_Reasons</valueSetName>
    </valueSet>
</CustomField>