Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Source of the form request(INC0401714)</description>
    <inlineHelpText>Source of the form request type</inlineHelpText>
    <label>Request Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>