Perkin-UAT/force-app/main/default/objects/Interaction__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Management</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Farmer/grower</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Regulatory/Compliance</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>